--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,26 +1,12 @@
+version: 2
+
 builds:
-  # List of builds
-  - # First Build
-    env:
-    - CGO_ENABLED=0
+  - env:
+      - CGO_ENABLED=0
     main: main.go
     ldflags: '-s -w -X github.com/sensu-community/sensu-plugin-sdk/version.version={{.Version}} -X github.com/sensu-community/sensu-plugin-sdk/version.commit={{.Commit}} -X github.com/sensu-community/sensu-plugin-sdk/version.date={{.Date}}'
     # Set the binary output location to bin/ so archive will comply with Sensu Go Asset structure
     binary: bin/{{ .ProjectName }}
-    goos:
-      - darwin
-      - linux
-      - solaris
-      - windows
-    goarch:
-      - amd64
-      - 386
-      - arm
-      - arm64
-    goarm:
-      - 5
-      - 6
-      - 7
     targets:
       - darwin_amd64
       - linux_386
